Fix image min width on mobile screen

--- a/pages/homepage.module.scss
+++ b/pages/homepage.module.scss
@@ -442,6 +442,11 @@
         font-size: 1.5rem;
       }
     }
+    .welcome-board-header {
+      img {
+        min-width: 300px;
+      }
+    }
   }
   .our-services {
     h1 {
